# trxmp

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: entry_gui.py  trxmp.spec
src/eqgenius/: __init__.py  __main__.py  app.py  cli.py
src/eqgenius/application/: __init__.py  audio_files.py
src/eqgenius/domain/: __init__.py  equalizer.py  errors.py
src/eqgenius/dsp/: __init__.py  biquad.py  engine.py  limiter.py
src/eqgenius/ui/: __init__.py  main_window.py
src/trxmp/: __init__.py  __main__.py  app.py  cli.py
src/trxmp/application/: audio_backend.py  audio_files.py  backend_switcher.py  capture.py  devices.py  eq_analysis.py  live_engine.py  preferences.py  preset_library.py  reference.py  update_check.py
src/trxmp/domain/: __init__.py  devices.py  equalizer.py  errors.py  library.py  reference.py  version.py
src/trxmp/dsp/: __init__.py  biquad.py  engine.py  spectrum.py
src/trxmp/infrastructure/: __init__.py  atomic_write.py  database.py  device_profile_repository.py  github_releases.py  loopback_capture.py  paths.py  preferences_file.py  preset_files.py  preset_repository.py  wav_io.py  windows_audio.py
src/trxmp/infrastructure/equalizer_apo/: __init__.py  backend.py  config_format.py  detection.py  device_support.py
src/trxmp/infrastructure/importers/: __init__.py  apo_config.py  peace_config.py
src/trxmp/infrastructure/lab_mode/: __init__.py  backend.py  cable_detection.py  pipeline.py
src/trxmp/infrastructure/reference_data/: __init__.py  catalog.py  frequency_bands.yaml  headphones.yaml
src/trxmp/ui/: backend_controller.py  device_controller.py  main_window.py  spectrum_controller.py  theme.py  update_controller.py  view_models.py
src/trxmp/ui/widgets/: __init__.py  band_controls.py  eliding_label.py  eq_curve.py  status_dot.py
tests/: __init__.py  conftest.py  fakes.py  test_apo_backend.py  test_apo_config_format.py  test_architecture.py  test_audio_files.py  test_backend_controller.py  test_backend_switcher.py  test_biquad.py  test_cli_preset.py  test_cli_reference.py  test_device_controller.py  test_device_profile_repository.py  test_devices.py  test_engine.py  test_eq_analysis.py  test_equalizer_domain.py  test_github_releases.py  test_header_widgets.py  test_importers.py  test_lab_mode.py  test_limiter.py  test_live_engine.py  test_main_window.py  test_preferences.py  test_preset_files.py  test_preset_library.py  test_preset_repository.py  test_reference.py  test_reference_catalog.py  test_spectrum.py  test_theme.py  test_update_check.py  test_update_controller.py  test_version.py  test_view_models.py  test_widgets.py
