[project]
name = "trxmp"
version = "0.3.0"
description = "System-wide parametric equalizer and headphone manager for Windows, with an Apple-inspired UI."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Equix", email = "equixete@gmail.com" }]
dependencies = [
    "numpy>=2.1",
    "platformdirs>=4.2",
    "pydantic>=2.9",
    "pyside6>=6.9",
    "pyyaml>=6.0",
    "scipy>=1.14",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "ruff>=0.9",
    "types-pyyaml>=6.0",
]

# gui-scripts (not scripts) so the installed launcher opens no console
# window on Windows. During development use `uv run python -m trxmp`,
# which keeps the console attached so you can see logs and tracebacks.
[project.gui-scripts]
trxmp = "trxmp.app:main"

# The offline processor is a real CLI, so it *wants* a console attached —
# note the deliberate contrast with the GUI entry point above.
[project.scripts]
trxmp-dsp = "trxmp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trxmp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle: PEP 8 style errors/warnings
    "F",      # pyflakes: real bugs (unused imports, undefined names)
    "I",      # isort: deterministic import ordering
    "N",      # pep8-naming
    "UP",     # pyupgrade: keeps syntax modern for our Python version
    "B",      # bugbear: likely-bug patterns (mutable default args, etc.)
    "SIM",    # simplify: flags needlessly complex code
    "C4",     # comprehensions: idiomatic collection building
    "RUF",    # ruff's own correctness rules
]

[tool.mypy]
strict = true
files = ["src", "tests"]

# scipy ships no type information. We acknowledge that *explicitly* here
# and contain the untypedness at call sites with typing.cast, instead of
# letting `Any` silently spread through the codebase.
[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
